--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -20,28 +20,28 @@
      - --pairedImgScale    => tamanho da imagem que cai (dentro do vagão)
      - --imgSafePad        => margem de segurança da imagem interna
      - --liftVH            => sobe/baixa o vagão dentro da faixa
-     - --wheelPadVH        => distancia o texto das rodas (menor = texto mais baixo)
+     - --wheelPadVH        => distância do texto às rodas (menor = texto mais baixo)
      - --trainH / --wagonFactor => altura total da faixa e do slot
-  ========================================================== */
+     ======================================================== */
   :root{
     /* Altura da FAIXA onde ficam os vagões (em vh numérico) */
-    --trainH: 48;
+    --trainH: 44;
 
     /* ESCALA do PNG do vagão (moldura) */
-    --wagonScale: 1.15;           /* ↑ deixa o vagão MAIOR sem mexer no container */
+    --wagonScale: 1.12;                /* ↑ maior */
 
     /* ESCALA da imagem que cai (dentro do vagão) */
-    --pairedImgScale: 0.70;        /* ↓ menor pra não cobrir a moldura */
+    --pairedImgScale: 0.70;            /* ↓ menor pra não cobrir a moldura */
 
     /* Folga extra pra imagem interna não encostar na moldura */
-    --imgSafePad: clamp(14px, 1.8vw, 24px);
+    --imgSafePad: clamp(14px, 1.6vw, 22px);
 
     /* Slot e posicionamento */
-    --wagonFactor: 1.00;           /* slot ocupa 100% da faixa */
-    --liftVH: 4.2;                 /* sobe BEM o vagão dentro da faixa */
-    --labelH: clamp(22px, 3.6vh, 40px);  /* altura do rótulo (texto) */
+    --wagonFactor: 0.86;               /* ↓ slot mais baixo = alinha com a moldura */
+    --liftVH: 3.2;                     /* ↑ sobe o vagão dentro da faixa */
+    --labelH: clamp(22px, 3.4vh, 38px);/* altura do rótulo (texto) */
     --windowInset: clamp(10px, 1.2vw, 18px); /* margem da janela do vagão */
-    --wheelPadVH: 2.0;             /* TEXTO MAIS BAIXO (menor = mais perto das rodas) */
+    --wheelPadVH: 2.0;                 /* TEXTO MAIS BAIXO (perto das rodas) */
 
     /* Espaçamentos laterais/entre colunas */
     --colGap: clamp(10px, 1.4vw, 20px);
@@ -69,7 +69,7 @@
   }
 
   /* ===== Cada vagão (slot) =====
-     O PNG do vagão é o fundo; a “janela” é a área útil. */
+     Moldura do vagão é o background. A “janela” (slot-img) alinha com a moldura. */
   .wagon{
     position:relative;
     height: calc(var(--trainH) * var(--wagonFactor) * 1vh);
@@ -89,18 +89,20 @@
       calc(var(--windowInset) + var(--labelH) + (var(--wheelPadVH) * 1vh))
       var(--windowInset);
 
-    /* Sobe o vagão para dar respiro a partir do “chão” */
+    /* Sobe o vagão para dar respiro do “chão” */
     transform: translateY(calc(-1 * var(--liftVH) * 1vh));
   }
 
-  /* Área da IMAGEM dentro da janela */
+  /* Área da IMAGEM dentro da janela (agora ancorada NO FUNDO do vagão) */
   .slot-img{
     position:absolute;
     top: var(--windowInset);
     left: var(--windowInset);
     right: var(--windowInset);
     bottom: calc(var(--windowInset) + var(--labelH) + (var(--wheelPadVH) * 1vh));
-    display:flex;align-items:center;justify-content:center;
+    display:flex;
+    align-items:flex-end;   /* <— encosta a imagem no “assoalho” do vagão */
+    justify-content:center;
     overflow:hidden;
   }
   .slot-img img.paired{
@@ -111,7 +113,7 @@
     filter: drop-shadow(0 2px 2px rgba(0,0,0,.12));
   }
 
-  /* Texto sempre visível, agora MAIS BAIXO (perto das rodas) */
+  /* Texto sempre visível, BAIXO (perto das rodas) */
   .word{
     position:absolute;
     left: var(--windowInset);
@@ -160,7 +162,7 @@
   }
   #restart-button:hover{background:#1c5980}
 
-  /* ===== Imagem durante a QUEDA — BEM MENOR ===== */
+  /* ===== Imagem durante a QUEDA — MENOR ===== */
   .falling{
     position:absolute;
     width:  clamp(28px, 5.5vw, 52px);
