--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -162,6 +162,24 @@
     height: clamp(28px, 5.5vw, 52px);
     object-fit:contain; pointer-events:none; z-index:150;
   }
+/* ===== Ajustes finos após o seu print ===== */
+
+/* Desce um pouco mais o rótulo (abaixo das rodas) */
+:root{
+  --labelBelowVH: 3.4;             /* 2.6 → 3.4 fica mais baixo */
+  --pairedImgScale: 0.62;           /* imagem interna menor (0.70 → 0.62) */
+  --imgSafePad: clamp(16px, 2vw, 26px); /* folga lateral/vertical maior */
+}
+
+/* Janela do vagão ligeiramente mais “fechada” e ancorada no piso */
+.slot-img{
+  top:    calc(var(--windowInset) + 6px);
+  bottom: calc(var(--windowInset) + (var(--wheelPadVH) * 1vh) + 2px);
+  align-items: flex-end;
+}
+
+/* Se você ativou debug e ficou verde, remova/garanta que esteja assim: */
+.slot-img{ background: none; border: none; }
 </style>
 </head>
 <body>
