--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -20,6 +20,7 @@
      - --wagonScale       => tamanho do PNG do vagão (moldura)
      - --pairedImgScale   => tamanho da imagem que cai (dentro do vagão)
      - --imgSafePad       => margem de segurança da imagem interna
+     - --pairedImgLift    => “sobe” a imagem dentro da janela
      - --liftVH           => sobe/baixa o vagão dentro da faixa
      - --wheelPadVH       => espaço acima das rodas (para a janela)
      - --labelBelowVH     => quão abaixo das rodas vai o rótulo (texto)
@@ -34,11 +35,12 @@
     --windowInset: clamp(10px, 1.2vw, 18px); /* margem interna da janela */
     --wheelPadVH: 2.0;            /* espaço acima das rodas (janela) */
 
-    --pairedImgScale: 0.70;       /* imagem dentro do vagão menor */
-    --imgSafePad: clamp(14px, 1.6vw, 22px); /* folga da imagem interna */
+    --pairedImgScale: 0.68;       /* imagem ocupa mais a janela */
+    --pairedImgLift: 6%;          /* levanta um pouco a imagem */
+    --imgSafePad: clamp(16px, 2vw, 26px); /* folga da imagem interna */
 
     --labelH: clamp(22px, 3.4vh, 38px); /* altura visual do rótulo */
-    --labelBelowVH: 2.6;          /* rótulo ABAIXO das rodas (vh) */
+    --labelBelowVH: 3.4;          /* rótulo ABAIXO das rodas (vh) */
 
     --colGap: clamp(10px, 1.4vw, 20px);
     --sidePad: clamp(12px, 2vw, 26px);
@@ -85,23 +87,26 @@
     overflow: visible; /* permite o rótulo “sair” para baixo */
   }
 
-  /* Área da imagem (ancorada no assoalho do vagão) */
+  /* ===== Área da imagem (centralizada e um pouco mais alta) ===== */
   .slot-img{
     position:absolute;
-    top: var(--windowInset);
-    left: var(--windowInset);
-    right: var(--windowInset);
-    bottom: calc(var(--windowInset) + (var(--wheelPadVH) * 1vh));
+    top:    calc(var(--windowInset) + 4px);
+    left:   var(--windowInset);
+    right:  var(--windowInset);
+    bottom: calc(var(--windowInset) + (var(--wheelPadVH) * 1vh) + 10px);
     display:flex;
-    align-items:flex-end;   /* encosta a imagem no fundo do vagão */
-    justify-content:center;
+    align-items:center;          /* centraliza verticalmente */
+    justify-content:center;      /* centraliza horizontalmente */
     overflow:hidden;
   }
+
+  /* Imagem emparelhada dentro do vagão */
   .slot-img img.paired{
     max-width:  calc((100% - var(--imgSafePad)*2) * var(--pairedImgScale));
     max-height: calc((100% - var(--imgSafePad)*2) * var(--pairedImgScale));
     width:auto;height:auto;object-fit:contain;display:block;pointer-events:none;
     filter: drop-shadow(0 2px 2px rgba(0,0,0,.12));
+    transform: translateY(calc(-1 * var(--pairedImgLift))); /* sobe ligeiro */
   }
 
   /* ===== Rótulo ABAIXO das rodas ===== */
@@ -162,24 +167,6 @@
     height: clamp(28px, 5.5vw, 52px);
     object-fit:contain; pointer-events:none; z-index:150;
   }
-/* ===== Ajustes finos após o seu print ===== */
-
-/* Desce um pouco mais o rótulo (abaixo das rodas) */
-:root{
-  --labelBelowVH: 3.4;             /* 2.6 → 3.4 fica mais baixo */
-  --pairedImgScale: 0.62;           /* imagem interna menor (0.70 → 0.62) */
-  --imgSafePad: clamp(16px, 2vw, 26px); /* folga lateral/vertical maior */
-}
-
-/* Janela do vagão ligeiramente mais “fechada” e ancorada no piso */
-.slot-img{
-  top:    calc(var(--windowInset) + 6px);
-  bottom: calc(var(--windowInset) + (var(--wheelPadVH) * 1vh) + 2px);
-  align-items: flex-end;
-}
-
-/* Se você ativou debug e ficou verde, remova/garanta que esteja assim: */
-.slot-img{ background: none; border: none; }
 </style>
 </head>
 <body>
