--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -128,12 +128,11 @@
     z-index: 2;
   }
 
-  .wagon.correct{animation:glow .8s ease-out forwards}
-  @keyframes glow{
-    0%{box-shadow:0 0 6px rgba(46,204,113,.35) inset}
-    50%{box-shadow:0 0 18px rgba(46,204,113,.65) inset}
-    100%{box-shadow:0 0 6px rgba(46,204,113,.35) inset}
-  }
+  .wagon.correct{
+  animation: none !important;
+  box-shadow: none !important;
+}
+
 
   /* ===== Balões ===== */
   .balloon{
