--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -17,30 +17,31 @@
   #game-container{position:relative;width:100%;height:100%;overflow:hidden}
 
   /* =================== CONTROLES RÁPIDOS ===================
-     - --wagonScale       => tamanho do PNG do vagão (moldura)
-     - --pairedImgScale   => tamanho da imagem que cai (dentro do vagão)
-     - --imgSafePad       => margem de segurança da imagem interna
-     - --pairedImgLift    => “sobe” a imagem dentro da janela
-     - --liftVH           => sobe/baixa o vagão dentro da faixa
-     - --wheelPadVH       => espaço acima das rodas (para a janela)
-     - --labelBelowVH     => quão abaixo das rodas vai o rótulo (texto)
+     - --wagonScale        => tamanho do PNG do vagão (moldura)
+     - --pairedImgScale    => tamanho da imagem que cai (dentro do vagão)
+     - --imgSafePad        => margem de segurança da imagem interna
+     - --pairedImgLift     => “sobe/desce” a imagem dentro da janela (negativo sobe, positivo desce)
+     - --liftVH            => sobe/baixa o vagão dentro da faixa
+     - --wheelPadVH        => espaço acima das rodas (para a janela)
+     - --labelBelowVH      => quão abaixo das rodas vai o rótulo (texto)
      - --trainH / --wagonFactor => altura total da faixa e do slot
   ========================================================== */
   :root{
-    --trainH: 44;                 /* altura da faixa do trem (vh) */
-    --wagonFactor: 0.86;          /* altura do slot relativa à faixa */
-    --wagonScale: 1.12;           /* escala do PNG do vagão (moldura) */
-    --liftVH: 3.2;                /* quanto o vagão sobe dentro da faixa */
+    --trainH: 44;
+    --wagonFactor: 0.86;
+    --wagonScale: 1.12;
+    --liftVH: 3.2;
 
-    --windowInset: clamp(10px, 1.2vw, 18px); /* margem interna da janela */
-    --wheelPadVH: 2.0;            /* espaço acima das rodas (janela) */
+    --windowInset: clamp(10px, 1.2vw, 18px);
+    --wheelPadVH: 2.0;
 
-    --pairedImgScale: 0.68;       /* imagem ocupa mais a janela */
-    --pairedImgLift: -50%;          /* levanta um pouco a imagem */
-    --imgSafePad: clamp(16px, 2vw, 26px); /* folga da imagem interna */
+    --pairedImgScale: 0.68;
+    /* Você disse que -50% foi o que posicionou certo em todos — mantendo. */
+    --pairedImgLift: -50%;
+    --imgSafePad: clamp(16px, 2vw, 26px);
 
-    --labelH: clamp(22px, 3.4vh, 38px); /* altura visual do rótulo */
-    --labelBelowVH: 3.4;          /* rótulo ABAIXO das rodas (vh) */
+    --labelH: clamp(22px, 3.4vh, 38px);
+    --labelBelowVH: 3.4;
 
     --colGap: clamp(10px, 1.4vw, 20px);
     --sidePad: clamp(12px, 2vw, 26px);
@@ -61,33 +62,29 @@
     grid-template-columns: repeat(var(--num-wagons), 1fr);
     align-items:end;
     gap: var(--colGap);
-    /* padding-bottom inclui espaço pro rótulo que fica FORA do vagão */
     padding: 0 var(--sidePad) calc(clamp(10px,1.4vw,20px) + var(--labelBelowVH) * 1vh + 6px);
     z-index:100;
+    will-change: transform;
   }
 
   /* ===== Cada vagão (slot) ===== */
   .wagon{
     position:relative;
     height: calc(var(--trainH) * var(--wagonFactor) * 1vh);
-    /* Moldura do vagão (wagon.png) */
     background-image: url('wagon.png');
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: calc(100% * var(--wagonScale)) auto;
-
-    /* Janela útil do vagão (SEM reservar espaço pro rótulo) */
     padding:
       var(--windowInset)
       var(--windowInset)
       calc(var(--windowInset) + (var(--wheelPadVH) * 1vh))
       var(--windowInset);
-
     transform: translateY(calc(-1 * var(--liftVH) * 1vh));
-    overflow: visible; /* permite o rótulo “sair” para baixo */
+    overflow: visible;
   }
 
-  /* ===== Área da imagem (centralizada e um pouco mais alta) ===== */
+  /* ===== Área da imagem (centralizada) ===== */
   .slot-img{
     position:absolute;
     top:    calc(var(--windowInset) + 4px);
@@ -95,28 +92,26 @@
     right:  var(--windowInset);
     bottom: calc(var(--windowInset) + (var(--wheelPadVH) * 1vh) + 10px);
     display:flex;
-    align-items:center;          /* centraliza verticalmente */
-    justify-content:center;      /* centraliza horizontalmente */
+    align-items:center;          
+    justify-content:center;      
     overflow:hidden;
   }
 
-  /* Imagem emparelhada dentro do vagão */
   .slot-img img.paired{
     max-width:  calc((100% - var(--imgSafePad)*2) * var(--pairedImgScale));
     max-height: calc((100% - var(--imgSafePad)*2) * var(--pairedImgScale));
     width:auto;height:auto;object-fit:contain;display:block;pointer-events:none;
     filter: drop-shadow(0 2px 2px rgba(0,0,0,.12));
-    transform: translateY(calc(-1 * var(--pairedImgLift))); /* sobe ligeiro */
+    transform: translateY(calc(-1 * var(--pairedImgLift))); /* negativo sobe / positivo desce, mantendo sua lógica */
   }
 
-  /* ===== Rótulo ABAIXO das rodas ===== */
+  /* ===== Rótulo ===== */
   .word{
     position:absolute;
     left:  var(--windowInset);
     right: var(--windowInset);
-    bottom: calc(-1 * var(--labelBelowVH) * 1vh); /* fora do vagão */
+    bottom: calc(-1 * var(--labelBelowVH) * 1vh);
     height: calc(var(--labelH) - 6px);
-
     display:flex;align-items:center;justify-content:center;
     text-transform:uppercase;text-align:center;font-weight:700;
     color:#1f2d3a;
@@ -128,11 +123,8 @@
     z-index: 2;
   }
 
-  .wagon.correct{
-  animation: none !important;
-  box-shadow: none !important;
-}
-
+  /* Tirando o brilho verde */
+  .wagon.correct{ animation: none !important; box-shadow: none !important; }
 
   /* ===== Balões ===== */
   .balloon{
@@ -148,7 +140,7 @@
     width:clamp(44px,8.5vw,88px);height:clamp(44px,8.5vw,88px);object-fit:contain;pointer-events:none;z-index:201
   }
 
-  /* ===== Feedback / Botão ===== */
+  /* ===== Feedback / Botões ===== */
   #feedback{
     position:absolute;top:45%;left:50%;transform:translate(-50%,-50%);
     background:rgba(231,76,60,.9);color:#fff;padding:15px 25px;border-radius:8px;font-size:1.2em;display:none;z-index:250
@@ -159,12 +151,67 @@
   }
   #restart-button:hover{background:#1c5980}
 
-  /* ===== Imagem durante a QUEDA — menor ===== */
   .falling{
     position:absolute;
     width:  clamp(28px, 5.5vw, 52px);
     height: clamp(28px, 5.5vw, 52px);
     object-fit:contain; pointer-events:none; z-index:150;
+  }
+
+  /* ===== Locomotiva e Partida do Trem ===== */
+  .locomotive{
+    position:absolute;
+    bottom: calc(var(--labelBelowVH) * 1vh + 6px); /* mesma “linha” dos vagões */
+    left: -30vw; /* começa fora da esquerda (será ajustado via transform) */
+    width: clamp(120px, 18vw, 240px);
+    height: clamp(80px, 12vw, 160px);
+    background: url('locomotive.png') no-repeat center/contain;
+    z-index:190; pointer-events:none; display:flex; align-items:center; justify-content:center;
+    transform: translateX(110vw);  /* começa fora à direita */
+    will-change: transform;
+  }
+  .locomotive .fallback-emoji{font-size:clamp(40px,6vw,72px);line-height:1}
+  .locomotive.run{ animation: loco-pass 1.8s linear forwards; }
+
+  @keyframes loco-pass{
+    from{ transform: translateX(110vw); }
+    to  { transform: translateX(-120vw); }
+  }
+
+  #train.depart{ animation: train-depart 1.2s ease-in forwards; }
+  @keyframes train-depart{
+    to{ transform: translateX(-120vw); opacity:0.98; }
+  }
+
+  body.animating, body.animating *{ cursor: default !important; }
+  body.animating #game-container{ pointer-events:none; }
+
+  /* ===== Painel de Parabéns ===== */
+  #congrats{
+    position:absolute; inset:0; display:none;
+    align-items:center; justify-content:center;
+    backdrop-filter: blur(2px);
+    z-index:500;
+  }
+  #congrats.show{ display:flex; }
+  #congrats .panel{
+    background:#ffffffee; border:1px solid rgba(0,0,0,.06);
+    border-radius:16px; padding:22px 26px; text-align:center;
+    box-shadow:0 10px 30px rgba(0,0,0,.18);
+    animation: pop-in .25s ease-out both;
+  }
+  #congrats h2{ margin-bottom:8px; font-size:1.4rem; }
+  #congrats p{ margin:0 0 14px; }
+  #close-congrats{
+    background:#16a34a; color:#fff; border:none; border-radius:10px;
+    padding:10px 16px; font-weight:700; cursor:pointer;
+    box-shadow:0 4px 10px rgba(0,0,0,.12);
+  }
+  #close-congrats:hover{ background:#12823c; }
+
+  @keyframes pop-in{
+    from{ transform:scale(.9); opacity:0; }
+    to{ transform:scale(1); opacity:1; }
   }
 </style>
 </head>
@@ -175,6 +222,15 @@
     <button id="restart-button" onclick="restartGame()">Restart</button>
     <div id="feedback">Try Again!</div>
     <div id="train"></div>
+
+    <!-- Painel de Parabéns -->
+    <div id="congrats">
+      <div class="panel">
+        <h2>Congratulations!</h2>
+        <p>You completed this phase.</p>
+        <button id="close-congrats">OK</button>
+      </div>
+    </div>
   </div>
 
   <!-- Firebase -->
@@ -199,6 +255,8 @@
     const train=document.getElementById('train');
     const feedback=document.getElementById('feedback');
     const overlay=document.getElementById('rotate-overlay');
+    const congrats=document.getElementById('congrats');
+    const closeCongratsBtn=document.getElementById('close-congrats');
 
     let wordsList=[], imagesList=[], numWagons=0, correctCount=0;
     const balloons=[];
@@ -307,13 +365,54 @@
       const paired=document.createElement('img'); paired.src=fallingImg.src; paired.className='paired';
       box.innerHTML=''; box.appendChild(paired);
       slot.classList.add('correct');
-      if(++correctCount===numWagons){ alert('Congratulations! You completed this phase.'); updateNextPhaseAuth(); }
+
+      if(++correctCount===numWagons){
+        // Quando terminar tudo, roda a animação do trem indo embora
+        runDepartureSequence();
+      }
     }
 
     /* ===== Erro / feedback ===== */
     let fbTimer=null;
     function showFeedback(){ feedback.style.display='block'; clearTimeout(fbTimer); fbTimer=setTimeout(()=>feedback.style.display='none',800); }
     function wrongDrop(el){ showFeedback(); const p=el.dataset.pair; el.remove(); const obj=imagesList.find(x=>x.pair===p); if(obj) createBalloon(obj); }
+
+    /* ===== Sequência de Partida do Trem ===== */
+    function runDepartureSequence(){
+      document.body.classList.add('animating');
+
+      // 1) Locomotiva cruza
+      const loco=document.createElement('div');
+      loco.className='locomotive';
+      const fallback=document.createElement('span');
+      fallback.className='fallback-emoji';
+      fallback.textContent='🚂';
+      loco.appendChild(fallback);
+      gameContainer.appendChild(loco);
+
+      loco.addEventListener('animationend', ()=>{
+        // 2) Depois que a locomotiva sai, os vagões partem
+        train.classList.add('depart');
+        train.addEventListener('animationend', ()=>{
+          // 3) Mostra painel de parabéns e libera próxima fase
+          showCongrats();
+          updateNextPhaseAuth();
+          // Limpa locomotiva (já fora de cena)
+          loco.remove();
+          document.body.classList.remove('animating');
+        }, {once:true});
+      }, {once:true});
+
+      // dispara a animação da locomotiva no próximo frame
+      requestAnimationFrame(()=>loco.classList.add('run'));
+    }
+
+    function showCongrats(){
+      congrats.classList.add('show');
+    }
+    closeCongratsBtn?.addEventListener('click', ()=>{
+      congrats.classList.remove('show');
+    });
 
     /* ===== Progresso ===== */
     function updateNextPhaseAuth(){
@@ -360,6 +459,9 @@
       gameContainer.querySelectorAll('.falling').forEach(i=>i.remove());
       train.querySelectorAll('.slot-img').forEach(b=>b.innerHTML='');
       train.querySelectorAll('.wagon').forEach(w=>w.classList.remove('correct'));
+      train.classList.remove('depart');
+      congrats.classList.remove('show');
+      document.querySelectorAll('.locomotive').forEach(l=>l.remove());
     }
   </script>
 </body>
